After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 739527 - Loading a project the setting video track caps restriction leads to video source height to be wrong
Loading a project the setting video track caps restriction leads to video sou...
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-editing-services
git master
Other Linux
: Normal normal
: 1.5.2
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2014-11-02 09:54 UTC by Thibault Saunier
Modified: 2015-06-24 14:42 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Project to reproduce (210.50 KB, application/x-tar)
2014-11-02 09:54 UTC, Thibault Saunier
  Details
frameposition: In case sources have the same size as track, follow track size (3.30 KB, patch)
2014-11-02 10:49 UTC, Thibault Saunier
none Details | Review
frameposition: In case sources have the same size as track, follow track size (3.29 KB, patch)
2014-11-02 10:51 UTC, Thibault Saunier
none Details | Review
frameposition: In case sources have the same size as track, follow track size (3.85 KB, patch)
2014-11-02 11:39 UTC, Thibault Saunier
none Details | Review
Same patch as before, but adding a unit test (5.58 KB, patch)
2014-11-02 13:23 UTC, Thibault Saunier
none Details | Review
frameposition: In case sources have the same size as track, follow track size (5.58 KB, patch)
2014-11-02 13:31 UTC, Thibault Saunier
none Details | Review
frameposition: In case sources have the same size as track, follow track size (5.58 KB, patch)
2014-11-02 13:31 UTC, Thibault Saunier
committed Details | Review

Description Thibault Saunier 2014-11-02 09:54:54 UTC
Created attachment 289825 [details]
Project to reproduce

Steps:

Extract the project attach and:

$ ges-launch-1.0 -l '/home/thiblahute/New Project-export/New Project.xges' -R "file:///home/thiblahute/New Project-export" --set-scenario="/home/thiblahute/New Project-export/20141102-104231.scenario"


Expected:

The video takes the whole videosink (width\=\(int\)960\,\ height\=\(int\)576\)

Result:

The video is smaller and takes just a small part in the middle  (width\=\(int\)720\,\ height\=\(int\)576)
Comment 1 Thibault Saunier 2014-11-02 10:49:34 UTC
Created attachment 289828 [details] [review]
frameposition: In case sources have the same size as track, follow track size

For example if the size has been serialized in a file, but the user as
not personalized the size, we want that whenever the restriction caps
change the size, we want to video size to be the same as the track
restriction caps ones.
Comment 2 Thibault Saunier 2014-11-02 10:51:27 UTC
Created attachment 289829 [details] [review]
frameposition: In case sources have the same size as track, follow track size

For example if the size has been serialized in a file, but the user has
not personalized the size, we want that whenever the restriction caps
change the size, the video should take the size of the track
restriction caps
Comment 3 Thibault Saunier 2014-11-02 11:39:33 UTC
Created attachment 289834 [details] [review]
frameposition: In case sources have the same size as track, follow track size

For example if the size has been serialized in a file, but the user has
not personalized the size, we want that whenever the restriction caps
change the size, the video should take the size of the track
restriction caps.

We now need to keep track of the current positionner.size even if
setting through caps size changes.
Comment 4 Thibault Saunier 2014-11-02 13:23:49 UTC
Created attachment 289837 [details] [review]
Same patch as before, but adding a unit test
Comment 5 Thibault Saunier 2014-11-02 13:31:15 UTC
Created attachment 289838 [details] [review]
frameposition: In case sources have the same size as track, follow track size

For example if the size has been serialized in a file, but the user has
not personalized the size, we want that whenever the restriction caps
change the size, the video should take the size of the track
restriction caps.

We know need to keep track of the current positionner.size even if
setting through caps size changes.
Comment 6 Thibault Saunier 2014-11-02 13:31:30 UTC
Created attachment 289839 [details] [review]
frameposition: In case sources have the same size as track, follow track size

For example if the size has been serialized in a file, but the user has
not personalized the size, we want that whenever the restriction caps
change the size, the video should take the size of the track
restriction caps.

We know need to keep track of the current positionner.size even if
setting through caps size changes.
Comment 7 Thibault Saunier 2014-11-10 16:28:06 UTC
Attachment 289839 [details] pushed as 08af372 - frameposition: In case sources have the same size as track, follow track size